--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -1,6 +1,7 @@
 footer
     background: $dark-primary-color
     padding: $padding 0
+
     .row
         @extend .text-left
 
@@ -9,61 +10,61 @@ footer
             margin-bottom: .7em
             @include size(1.4)
 
-        .col
-            padding: 0
-            &:first-child
-                flex-basis: 55%
-            &:not(:first-child)
-                flex-basis: 40%
-            @media (min-width: $lg)
-                &:first-child
-                    flex-basis: 40%
-                &:not(:first-child)
-                    flex-basis: 30%
-                &:last-child
-                    flex-basis: 15%
+        a
+            color: $primary-color
+            text-decoration: none
 
-            &:not(:last-child)
+            &:hover
+                color: $secondary-color
+
+        @media(min-width: $sm)
+            .col-6, .col-auto
                 margin-bottom: 2em
 
-            a
-                color: $primary-color
-                text-decoration: none
+        @media(min-width: $md)
+            .col-6, .col-auto
+                flex-basis: 100%
 
-                &:hover
-                    color: $secondary-color
+        @media(min-width: $lg)
+            .col-6
+                flex-basis: 40%
+                margin: 0
+                padding-right: 1.5em
+            .col-auto
+                flex-basis: auto
+                margin: 0
 
+        p
+            margin-bottom: 1em
+
+            span
+                color: pink
+                @include size(1)
+                margin: 0 .3em
+
+        .copyright
             p
-                margin-bottom: 1em
+                margin: 0
 
-                span
-                    color: pink
-                    @include size(1)
-                    margin: 0 .3em
+        form
+            display: flex
 
-            .copyright
-                p
-                    margin: 0
-
-            form
-                display: flex
+            input
+                padding: .7em
+                flex-grow: 1
                 width: 100%
 
-                input
-                    padding: .8em 1.5em
-                    flex-basis: 100%
+            button
+                background: $primary-color
+                color: $white-color
+                border: none
+                padding: 0 1.4em
+                cursor: pointer
 
-                button
-                    background: $primary-color
-                    color: $white-color
-                    border: none
-                    flex-basis: 50px
-                    cursor: pointer
+        .social-networks
+            a
+                color: $white-color
+                padding: .3em
 
-            .social-networks
-                a
-                    color: $white-color
-                    padding: .3em
-
-                    &:hover
-                        color: $primary-color
+                &:hover
+                    color: $primary-color
