--- a/css/_utilities.sass
+++ b/css/_utilities.sass
@@ -30,12 +30,12 @@
 .overflow-hidden
     overflow: hidden
 
-@media (max-width: $sm)
-    .sm-width-70
+@media (max-width: $md)
+    .md-width-70
         max-width: 70%
         margin-bottom: 2em
 
-    .sm-first
+    .md-first
         order: -1
 
 //     .hidden-md
