--- a/css/_layout.sass
+++ b/css/_layout.sass
@@ -7,8 +7,8 @@
     @extend .text-center
 
 .col-default
-    flex-basis: 100%
-    padding: 0 0.5em
+    flex: 0 0 100%
+    padding: 0.3em
 
 .col
     @extend .col-default
@@ -32,3 +32,7 @@
         flex-basis: 50%
     @media (min-width: $lg)
         flex-basis: 25%
+
+.col-auto
+    @extend .col-default
+    flex-basis: auto
