Header navigation structure update #42

--- a/css/_elements.sass
+++ b/css/_elements.sass
@@ -19,7 +19,8 @@ section
 
     &:first-of-type
         padding-top: 2em
-        padding-bottom: 0
+        @media(min-width: $md)
+            padding-bottom: 0
 
     .col
         p
