--- a/css/_utilities.sass
+++ b/css/_utilities.sass
@@ -7,6 +7,8 @@
         flex-wrap: nowrap
     @media (min-width: $md)
         flex-direction: row
+        .md-text-left
+            text-align: left
 
 .row-center
     align-items: center
@@ -29,6 +31,9 @@
 
 .overflow-hidden
     overflow: hidden
+
+.letter-spacing
+    letter-spacing: 3px;
 
 @media (max-width: $md)
     .md-width-70
