--- a/css/_button.sass
+++ b/css/_button.sass
@@ -9,6 +9,7 @@
     display: inline-block
     @extend .text-uppercase
     @extend .bg-gradient
+    transition: box-shadow .3s
 
     &:hover
         box-shadow: 0 20px 20px 0 rgba(132, 144, 255, .3)
