--- a/css/_blog.sass
+++ b/css/_blog.sass
@@ -24,6 +24,7 @@
         .flex
             flex-direction: row
             justify-content: flex-start
+            flex-wrap: wrap
 
         .photo
             img
