--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -51,8 +51,8 @@ footer
 
             input
                 padding: .7em
-                flex-grow: 1
-                width: 100%
+                // flex-grow: 1
+                width: 70%
 
             button
                 background: $primary-color
