--- a/css/_header.sass
+++ b/css/_header.sass
@@ -84,6 +84,8 @@ header
     position: fixed
     top: 15px
     left: 90%
+    @media (max-width: 300px)
+        left: 80%
     font-weight: 900
     cursor: pointer
     padding: .5em
